[gd_scene load_steps=17 format=3 uid="uid://dx5184jxv6hi3"]

[ext_resource type="Script" path="res://scripts/fps_controller.gd" id="1"]
[ext_resource type="Shader" path="res://shaders/PostProcess3D/sptl_shdr_3d.gdshader" id="2_e1kmm"]
[ext_resource type="Theme" uid="uid://cxdpo2r725tjp" path="res://ui/themes/debug_panel.tres" id="2_pl2w0"]
[ext_resource type="Shader" path="res://shaders/PostProcess2D/fisheyegdshader.gdshader" id="2_uqvly"]
[ext_resource type="Script" path="res://scripts/debug.gd" id="3_2aih1"]
[ext_resource type="Script" path="res://scripts/PP2D_color_rect_res_depend.gd" id="3_gfe20"]
[ext_resource type="Theme" uid="uid://b2ip6l5jd7tfb" path="res://ui/themes/crosshair.tres" id="7_3rdxf"]
[ext_resource type="Script" path="res://scripts/crosshair.gd" id="7_4sfs8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jkwgu"]

[sub_resource type="SphereShape3D" id="SphereShape3D_glv2y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mwfyf"]
render_priority = 0
shader = ExtResource("2_e1kmm")
shader_parameter/edge_color = Color(0, 0, 0, 1)
shader_parameter/edge_threshold = 0.01
shader_parameter/noise_frequency = 10.0
shader_parameter/noise_offset_intensity = 0.002

[sub_resource type="QuadMesh" id="QuadMesh_uaoyx"]
material = SubResource("ShaderMaterial_mwfyf")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_adba5"]
shader = ExtResource("2_uqvly")
shader_parameter/effect_amount = 1.0

[sub_resource type="Animation" id="Animation_c34ra"]
resource_name = "Crouch"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.35, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 2, 0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.4, 0, -0.112107, -0.104795, 0.202733, 0.0465329, -0.0900207, -0.23, -0.053732, -0.018803, 0.0448723, 0.0157026, -0.2, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.6, 0.8, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Camera:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.14, -0.1, 0, 0.1, 0, -0.16, -0.1, 0, 0.1, 0, -0.14, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0.6, 0.8, 1)
}

[sub_resource type="Animation" id="Animation_b607x"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Camera:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.14, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kxfx"]
_data = {
"Crouch": SubResource("Animation_c34ra"),
"RESET": SubResource("Animation_b607x")
}

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("ANIMATIONPLAYER", "CROUCH_SHAPECAST")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1")
ANIMATIONPLAYER = NodePath("AnimationPlayer")
CROUCH_SHAPECAST = NodePath("Head/ShapeCast3D")

[node name="StairsHandling" type="Node3D" parent="."]

[node name="StairsAheadPivot" type="Node3D" parent="StairsHandling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)

[node name="StairsAheadRayCast3D" type="RayCast3D" parent="StairsHandling/StairsAheadPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.65)
target_position = Vector3(0, -0.55, 0)
debug_shape_custom_color = Color(0.835294, 0, 0.960784, 1)
debug_shape_thickness = 3

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="StairsHandling"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, -0.75, 0)
debug_shape_custom_color = Color(0.835294, 0, 0.960784, 1)
debug_shape_thickness = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_jkwgu")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="ShapeCast3D" type="ShapeCast3D" parent="Head"]
shape = SubResource("SphereShape3D_glv2y")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="Camera" type="Camera3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.14, 0)
fov = 95.0

[node name="PostProcess3D" type="MeshInstance3D" parent="Head/Camera"]
visible = false
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_uaoyx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PostProcess2D" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control/PostProcess2D"]
material = SubResource("ShaderMaterial_adba5")
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
script = ExtResource("3_gfe20")

[node name="DebugPanel" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 60.0
theme = ExtResource("2_pl2w0")
script = ExtResource("3_2aih1")

[node name="MarginContainer" type="MarginContainer" parent="Control/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Crosshair" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -17.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_3rdxf")
script = ExtResource("7_4sfs8")

[node name="PlayerStateMachine" type="Node" parent="."]

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0kxfx")
}

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
